<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ComplainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <LinearLayout
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="back"
                android:src="@drawable/ic_govt_logo2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/start"
            android:layout_toLeftOf="@+id/right"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_1"
                android:textColor="@color/white"
                android:textSize="@dimen/dm_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_2"
                android:textColor="@color/white"
                android:textSize="@dimen/dm_17" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="openHistory"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_recent_history" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollViewParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dm_20"
                android:backgroundTint="@color/app_bg"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dm_10"
                    android:background="@color/app_bg"
                    android:orientation="vertical"
                    android:visibility="visible">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dm_10"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/dm_5"
                        android:text="@string/type_of_complaint"
                        android:textSize="@dimen/dm_17" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dm_40"
                        android:layout_marginTop="@dimen/dm_15"
                        android:background="@color/white">

                        <Spinner
                            android:id="@+id/spnProblemType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/type_of_complaint" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dm_15"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dm_10"
                            android:layout_weight="6"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/dm_5"
                            android:text="@string/complaint_details"
                            android:textSize="@dimen/dm_17" />

                        <ImageView
                            android:layout_width="@dimen/dm_40"
                            android:layout_height="@dimen/dm_40"
                            android:onClick="openVoice"
                            android:src="@drawable/ic_voice" />
                    </LinearLayout>


                    <EditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dm_120"
                        android:layout_marginTop="@dimen/dm_5"
                        android:background="@color/white"
                        android:gravity="top|left"
                        android:hint="@string/type_description"
                        android:maxLines="10"
                        android:padding="@dimen/dm_10" />
                    <Button
                        android:id="@+id/buttonChoose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/dm_15"
                        android:background="@drawable/bt_shape_4"
                        android:onClick="btnChooseFile"
                        android:padding="@dimen/dm_5"
                        android:textColor="@color/white"
                        android:text="@string/choose_photo"
                        android:textSize="@dimen/dm_17" />

                    <ImageView
                        android:id="@+id/imgCapture"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dm_250"
                        android:layout_marginTop="@dimen/dm_10"
                        android:scaleType="fitXY"
                        android:visibility="gone" />
                    <Button
                        android:id="@+id/buttonChoose2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/dm_15"
                        android:background="@drawable/bt_shape_4"
                        android:onClick="btnChooseFile2"
                        android:padding="@dimen/dm_5"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        android:text="@string/choose_photo2"
                        android:textSize="@dimen/dm_17" />

                    <ImageView
                        android:id="@+id/imgCapture2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dm_250"
                        android:layout_marginTop="@dimen/dm_10"
                        android:scaleType="fitXY"
                        android:visibility="gone" />
                    <Button
                        android:id="@+id/buttonChoose3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/dm_15"
                        android:background="@drawable/bt_shape_4"
                        android:onClick="btnChooseFile3"
                        android:padding="@dimen/dm_5"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        android:text="@string/choose_photo3"
                        android:textSize="@dimen/dm_17" />
                    <ImageView
                        android:id="@+id/imgCapture3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dm_250"
                        android:layout_marginTop="@dimen/dm_10"
                        android:scaleType="fitXY"
                        android:visibility="gone" />



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dm_30">

                        <TextView
                            android:id="@+id/submitTicket"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:background="@drawable/bt_shape_4"
                            android:gravity="center"
                            android:onClick="submitComplaint"
                            android:padding="@dimen/dm_10"
                            android:text="@string/complaint"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dm_17" />

                        <ImageView
                            android:id="@+id/imageViewLoading"
                            android:layout_width="@dimen/dm_30"
                            android:layout_height="@dimen/dm_30"
                            android:layout_centerInParent="true"
                            android:src="@drawable/loading"
                            android:visibility="gone" />

                    </RelativeLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>