<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm_20"
        android:layout_marginRight="@dimen/dm_20"
        android:backgroundTint="@color/app_bg"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/bt_shape_3"
                android:layout_height="wrap_content">

                <ImageView android:id="@+id/govtLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_govt_logo2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/dm_17"
                        android:padding="@dimen/dm_5"
                        android:textColor="@color/white"
                        android:text="@string/title_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/dm_15"
                        android:text="@string/title_2" />
                </LinearLayout>
                <ImageView android:id="@+id/logoRight"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_govt_logo2" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dm_10"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/edtComplainerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/dm_20"
                    android:background="@drawable/rounder_edittext"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/dm_15"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/dm_17"
                    android:visibility="visible" />


                <EditText
                    android:id="@+id/edtComplainerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/dm_30"
                    android:background="@drawable/rounder_edittext"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/dm_15"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/dm_17"
                    android:visibility="visible" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dm_30">

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_shape_4"
                        android:gravity="center"
                        android:onClick="btnLogin"
                        android:padding="@dimen/dm_15"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dm_17" />

                    <ImageView
                        android:id="@+id/imageViewLoading"
                        android:layout_width="@dimen/dm_30"
                        android:layout_height="@dimen/dm_30"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_launcher_background"
                        android:visibility="visible" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>