<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bg"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolBarStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dm_5"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/viewComplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dm_5"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dm_10"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dm_10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:padding="2dp"
                            android:text="@string/complaint_no"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/dm_20" />


                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:padding="2dp"
                            android:text="@string/name"
                            android:textSize="@dimen/dm_17" />


                        <TextView
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="2dp"
                            android:text="@string/phone_no"
                            android:textSize="@dimen/dm_17" />

                        <TextView
                            android:id="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:padding="2dp"
                            android:text="@string/address"
                            android:textSize="@dimen/dm_17" />

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="2dp"
                            android:text="@string/date"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/dm_17" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/app_bg" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/viewComplaint2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/white"
                        android:elevation="5dp"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        app:cardCornerRadius="5dp">

                        <TextView
                            android:id="@+id/txtComplaint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:padding="2dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/dm_17" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/compliantPhoto1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dm_250"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/placeholder"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/compliantPhoto2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dm_250"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dm_5"
                            android:scaleType="fitXY"
                            android:src="@drawable/placeholder"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/compliantPhoto3"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dm_250"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dm_5"
                            android:scaleType="fitXY"
                            android:src="@drawable/placeholder"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm_20" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>